--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <nav>
   <a href="CatInHat.html">Cat In the Hat</a>             
   <a href="wwr/index.html">White Water Rafting Website</a>
-  <a href="https://github.com/Evytsnow/testproject/blob/main/wdd130/wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+  <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
   <a href="positioning.html">Positioning Activity</a>
   <a href="#">Personal Website</a>
   <a href="#">Personal Siteplan</a>
